# C-parser

./: .gitignore  CMakeLists.txt  README.md  c_parser.cpp  c_parser.h  expression_chain.h  lalr_main.cpp  lalr_parser.h  lalr_states.h  lalr_table.h  lexer.h  lrparser.cpp  lrparser.sln  lrparser.vcxproj  lrparser.vcxproj.filters  output.gv  parse_rule.h  parse_state.h  parse_tree.h  rule_expression.h
include/: c_parser.h  c_token.h  expression_chain.h  lalr_parser.h  lalr_table.h  parse_item.h  parse_rule.h  parse_tree.h  rule_expression.h
sources/: c_parser.cpp  c_parser_main.cpp  lalr_main.cpp  tests.cpp
tests/: bad_type.c  hello_world.c  hello_world.gv  shift-reduce.c  shift-reduce.gv  typedef_union.c  typedef_union.gv
